--- a/src/styl/_header.styl
+++ b/src/styl/_header.styl
@@ -27,7 +27,7 @@ $bg
 			transition all .4s
 			content '</> AD'
 			+above(cut)
-				content '</> Anon Developer'
+				content '<FreakHQ />'
 
 // Header Post
 .header-post
