--- a/src/styl/_post.styl
+++ b/src/styl/_post.styl
@@ -7,7 +7,7 @@ $padding-title-header
         visibility hidden
 .post
     position relative
-    top 5.5em
+    top rem(50px)
     background #fff
 .post-content
     padding rem(40px) 0
