--- a/src/styl/_header.styl
+++ b/src/styl/_header.styl
@@ -25,7 +25,7 @@ $bg
 		font-size rem(28px)
 		&:after
 			transition all .4s
-			content '</> AD'
+			content '<FreakHQ />'
 			+above(cut)
 				content '<FreakHQ />'
 
