--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@
     <body>
         {% include svg-icons.html %}
         {% include header-post.html %}
-        <section class="post">
+        <section class="post-inner-page">
 
             <article role="article" id="post" class="post-content" itemprop="articleBody">
                 {{ content }}
