--- a/_includes/author.html
+++ b/_includes/author.html
@@ -1,4 +1,4 @@
-<section class="author" itemprop="author">
+<!-- <section class="author" itemprop="author">
     <div class="details" itemscope itemtype="http://schema.org/Person">
         <img itemprop="image" class="img-rounded" src="/assets/img/blog-author.jpg" alt="{{site.name}}">
         <p class="def">Author</p>
@@ -10,3 +10,4 @@
         <p><a itemprop="github" class="github" href="https://github.com/{{site.github_username}}">github.com/{{site.github_username}}</a></p>
     </div>
 </section>
+ -->
